--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "javascript-data-structure-and-algorithm",
   "version": "1.0.0",
   "description": "JavaScript Data Structure and Algorithm",
-  "type": "module",
-  "scripts": {},
+  "scripts": {
+    "test": "mocha ./test --recursive --reporter mochawesome",
+    "coverage": "npm run generate-report && nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "generate-report": "nyc --report-dir coverage npm run test && nyc report --reporter=text"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gookyn/javascript-data-structure-and-algorithm.git"
@@ -18,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/gookyn/javascript-data-structure-and-algorithm/issues"
   },
-  "homepage": "https://github.com/gookyn/javascript-data-structure-and-algorithm#readme"
+  "homepage": "https://github.com/gookyn/javascript-data-structure-and-algorithm#readme",
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "codecov": "^3.8.3",
+    "mocha": "^10.1.0",
+    "mochawesome": "^7.1.3",
+    "nyc": "^15.1.0"
+  }
 }
