--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,21 @@
 {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "es2021": true
-  },
-  "extends": ["eslint:recommended", "prettier"],
-  "overrides": [],
-  "parserOptions": {
-    "ecmaVersion": "latest"
-  },
-  "rules": {
-    "prettier/prettier": "error"
-  },
-  "plugins": ["prettier"]
+	"env": {
+		"browser": true,
+		"commonjs": true,
+		"es2021": true
+	},
+	"extends": ["eslint:recommended", "prettier"],
+	"overrides": [],
+	"parserOptions": {
+		"ecmaVersion": "latest"
+	},
+	"rules": {
+		"prettier/prettier": "error"
+	},
+	"plugins": ["prettier"],
+	"globals": {
+		"describe": true,
+		"beforeEach": true,
+		"it": true
+	}
 }
