--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
 		"source.fixAll.eslint": true
 	},
 	"editor.formatOnSave": true,
-	"cSpell.words": ["datastructure"]
+	"cSpell.words": ["datastructure", "kruskal", "Warshall"]
 }
